[gd_scene load_steps=2 format=3 uid="uid://c6vr8mrk7co7q"]

[ext_resource type="Script" path="res://Game/Scenes/components/camera_2d.gd" id="1_kc24v"]

[node name="Camera2D" type="Camera2D"]
position_smoothing_enabled = true
script = ExtResource("1_kc24v")

[node name="PlayerTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="PlayerTimer" to="." method="_on_shake_timer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_land_timer_timeout"]
